--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -7,7 +7,7 @@
     <form [formGroup]="loginForm">
         <input type="text" formControlName="username" name="username"  class="input-field" placeholder="Introduzca su nombre de usuario" required>
         <input type="password" formControlName="password" name="password" class="input-field" placeholder="Introduzca su contraseña" required>
-     <button type="submit" class="login-btn" (click)="submit()">Inicio</button>
+     <button type="button" class="login-btn" (click)="submit()">Inicio</button>
     </form>
 
     <div class="options">
