--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -1,108 +1,19 @@
 .body {
-    align-items: center;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #a18cd1, #fbc2eb);
-    background-size: 400% 400%;
-    animation: gradientBG 6s ease infinite;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #a18cd1, #fbc2eb);
+  background-size: 400% 400%;
+  animation: gradientBG 6s ease infinite;
+}
+
+@keyframes gradientBG {
+  0% {
+    background-position: 0% 50%;
   }
-
-  @keyframes gradientBG {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%;
   }
-
-.login-container {
-    background: rgba(255, 255, 255, 0.247);
-    backdrop-filter: blur(10px);
-    border-radius: 15px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    width: 350px;
-    padding: 30px;
-    text-align: center;
-    /* color: white; */
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  100% {
+    background-position: 0% 50%;
   }
-
-.profile-icon {
-    width: 60px;
-    height: 60px;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    margin-bottom: 20px;
-}
-
-.profile-icon img {
-    width: 30px;
-    height: 30px;
-}
-
-.input-field {
-    background: rgba(255, 255, 255, 0.15);
-    border: none;
-    border-radius: 25px;
-    margin: 10px 0;
-    padding: 10px 20px;
-    font-size: 14px;
-    color: rgb(99, 14, 104); 
-    width: 100%;
-    outline: none;
-}
-
-::placeholder {
-   color: rgb(99, 14, 104);
-}
-
-.options {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 12px;
-    margin: 10px 0;
-
-    justify-content: center;
-   gap: 20px; 
-}
-
-.options a {
-   color: rgb(99, 14, 104);
-    text-decoration: none;
-}
-
-.login-btn {
-    background: white;
-    color: #9b5de5;
-    border: none;
-    border-radius: 25px;
-    padding: 10px 20px;
-    font-size: 14px;
-    font-weight: bold;
-    cursor: pointer;
-    margin-top: 10px;
-    transition: background 0.3s;
-}
-
-.login-btn:hover {
-    background: #fefefe;
-}
-
-.footer {
-    margin-top: 20px;
-    font-size: 12px;
-   color: rgb(99, 14, 104);
-}
-
-.footer a {
-    color: rgba(255, 255, 255, 0.9);
-    text-decoration: none;
 }
