--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="body">
-<div class="container d-flex justify-content-center align-items-center vh-100">
+  <h1 class=" d-flex justify-content-center text-purple ">Product Manage</h1>
+<div class="container d-flex justify-content-center align-items-center h-100">
   <div class="card bg-light shadow-lg p-4 rounded-4 border border-purple" style="max-width: 400px; width: 100%;">
     
     <!-- Ícono de usuario -->
@@ -10,10 +11,10 @@
     <!-- Formulario con Bootstrap -->
     <form [formGroup]="loginForm" class="d-flex flex-column gap-3">
       <div class="form-group">
-        <input type="text" formControlName="username" class="form-control rounded-pill border-purple text-purple placeholder-purple" placeholder="Nombre de usuario" required>
+        <input type="text" formControlName="username" [class.isInvalid]="loginForm.get('username')?.invalid" class="form-control rounded-pill border-purple text-purple placeholder-purple" placeholder="Nombre de usuario" required>
       </div>
       <div class="form-group">
-        <input type="password" formControlName="password" class="form-control rounded-pill border-purple text-purple placeholder-purple" placeholder="Contraseña" required>
+        <input type="password" formControlName="password"  class="form-control rounded-pill border-purple text-purple placeholder-purple" placeholder="Contraseña" required>
       </div>
       <button type="button" class="btn btn-purple w-100 rounded-pill fw-bold shadow-lg" (click)="submit()">Iniciar sesión</button>
     </form>
