[FTR] it started with the product view

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -41,7 +41,7 @@
 
       <!-- Indicador de carga -->
       <div *ngIf="loading" class="text-center mt-3">
-        <div class="spinner-border text-purple" role="status">
+        <div class="spinner-border " role="status">
           <span class="visually-hidden">Cargando...</span>
         </div>
       </div>
@@ -52,7 +52,7 @@
       </div>
 
       <!-- Footer -->
-      <div class="text-center mt-3 text-purple fw-bold">
+      <div class="text-center mt-3  fw-bold">
         Mi primera web mi gente :3
       </div>
     </div>
