[FTR] Add boostrap icons, delete dashboard, redirected to product view, add row and col settings in product html

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,3 +1,4 @@
+<!-- LOS  ICONS SIGUEN SIN FUNCIONAR, REVISA ESOOOOOOOOOOO -->
 <div class="body">
   <div class="container d-flex justify-content-center align-items-center h-100">
     <div
