--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,3 +1,4 @@
+<!-- REVISAR ROW Y COL-->
 <div class="body">
   <div
     class="header d-flex justify-content-between align-items-center gap-2 p-2"
@@ -50,14 +51,15 @@
         (click)="obtenerProductos()"
       >
         <i class="bi bi-search"></i> Buscar
-        <!-- No me sale el icon -->
+        
       </button>
     </div>
 
     <div
-      class="card-deck d-flex justify-content-center align-items-center h-100"
+      class="row row-cols-4 align-items-start"
     >
-      <div class="card" *ngFor="let producto of productos">
+    <ng-container *ngFor="let producto of productos">
+      <div class="card col-md-4">
         <img class="card-img-top" src="..." alt="Imagen del producto" />
         <div class="card-body">
           <h5 class="card-title">{{ producto.name }}</h5>
@@ -75,6 +77,7 @@
         </div>
         <a href="#" class="btn btn-primary">Ver detalles</a>
       </div>
+    </ng-container>
     </div>
   </div>
 
