--- a/src/app/features/product/product.component.scss
+++ b/src/app/features/product/product.component.scss
@@ -13,6 +13,9 @@
   color:white;
 }
 
-
+.banner_back{
+  height: 100vh;
+  font-family: Arial, sans-serif; 
+}
 //background: linear-gradient(135deg, #d4a5f0, #7147e2);
   //background-size: 400% 400%;
