--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -36,8 +36,7 @@
 
     <!-- Banner -->
     <section
-      style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
-      class="text-white position-relative border"
+      class="text-white position-relative border banner "
     >
       <div class="row align-items-center mx-0">
         <div class="col-md-6">
@@ -45,8 +44,7 @@
             <h2 class="fw-bold">Dto. Bienvenida</h2>
             <p>Especial para nuevos usuarios</p>
             <button
-              class="btn text-white fw-bold"
-              style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
+              class="btn text-white fw-bold button_setting_2"
             >
               Comprar
             </button>
@@ -56,7 +54,6 @@
           <div class="d-flex justify-content-around align-items-center">
             <div
               class="card border"
-              style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
             >
               <img
                 src="https://via.placeholder.com/200"
@@ -65,11 +62,9 @@
               />
               <div
                 class="card-img-overlay text-center text-white border"
-                style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
               >
                 <span
                   class="badge fs-5"
-                  style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
                 >
                   -62%
                 </span>
@@ -77,7 +72,7 @@
             </div>
             <div
               class="card border"
-              style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
+              
             >
               <img
                 src="https://via.placeholder.com/200"
@@ -95,22 +90,19 @@
       <div class="d-flex justify-content-around">
         <div>
           <i
-            class="bi bi-truck fs-3 text-white p-2 rounded"
-            style="background-color: rgb(124, 13, 124); border: 2px solid rgb(110, 0, 110);"
+            class="bi bi-truck fs-3 text-white p-2 rounded settings1"
           ></i>
           <p class="mb-0">Envío gratis</p>
         </div>
         <div>
           <i
-            class="bi bi-arrow-repeat fs-3 text-white p-2 rounded"
-            style="background-color: rgb(124, 13, 124); border: 2px solid rgb(110, 0, 110);"
+            class="bi bi-arrow-repeat fs-3 text-white p-2 rounded settings2 "
           ></i>
           <p class="mb-0">Reembolso por fallos</p>
         </div>
         <div>
           <i
-            class="bi bi-shield-check fs-3 text-white p-2 rounded"
-            style="background-color: rgb(124, 13, 124); border: 2px solid rgb(110, 0, 110);"
+            class="bi bi-shield-check fs-3 text-white p-2 rounded settings3"
           ></i>
           <p class="mb-0">Devoluciones gratis</p>
         </div>
@@ -143,8 +135,7 @@
 
       <!-- Search Button -->
       <button
-        class="btn text-white fw-bold d-flex align-items-center gap-2"
-        style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
+        class="btn text-white fw-bold d-flex align-items-center gap-2 btn_filter"
         (click)="obtenerProductos()"
       >
         <i class="bi bi-search"></i> Buscar
@@ -152,35 +143,55 @@
     </div>
 
     <!-- Product Cards -->
-    <div class="card-deck d-flex justify-content-center align-items-center h-100">
-      <div
-        class="card border"
-        *ngFor="let producto of productos"
-        style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
-      >
-        <img class="card-img-top" src="..." alt="Imagen del producto" />
-        <div class="card-body text-white">
-          <h5 class="card-title">{{ producto.name }}</h5>
-          <p class="card-text">
-            {{
-              producto.description.length > 50
-                ? producto.description.substring(0, 50) + "..."
-                : producto.description
-            }}
-          </p>
-          <p><strong>Precio:</strong> ${{ producto.price }}</p>
+    <div *ngIf="!isLoading" class="card-deck d-flex justify-content-center align-items-center h-100">
+      <div class="row row-cols">
+    <div class="col">
+      <div class="card border m-2" *ngFor="let producto of productos">
+
+          <img class="card-img-top" alt="Imagen del producto" />
+          <div class="card-body text-white">
+            <h5 class="card-title">{{ producto.name }}</h5>
+            <p class="card-text">
+              {{
+                producto.description.length > 50
+                  ? producto.description.substring(0, 50) + "..."
+                  : producto.description
+              }}
+            </p>
+            <p><strong>Precio:</strong> ${{ producto.price }}</p>
+          </div>
+          <div class="card-footer"></div>
+         
+          <a href="#" class="btn text-white fw-bold btn_settings">
+            Ver detalles
+          </a>
+           <div class="rating"> 
+            <div class="rating d-flex gap-2">
+  <input type="radio" id="star5" name="rating" value="5" hidden>
+  <label for="star5"><i class="bi bi-star-fill text-warning fs-3"></i></label>
+
+  <input type="radio" id="star4" name="rating" value="4" hidden>
+  <label for="star4"><i class="bi bi-star-fill text-warning fs-3"></i></label>
+
+  <input type="radio" id="star3" name="rating" value="3" hidden>
+  <label for="star3"><i class="bi bi-star-fill text-warning fs-3"></i></label>
+
+  <input type="radio" id="star2" name="rating" value="2" hidden>
+  <label for="star2"><i class="bi bi-star-fill text-warning fs-3"></i></label>
+
+  <input type="radio" id="star1" name="rating" value="1" hidden>
+  <label for="star1"><i class="bi bi-star-fill text-warning fs-3"></i></label>
+</div>
+
+          </div>
         </div>
-        <div class="card-footer">
-          <small class="text-muted">Puntuación: ★a★★★★</small>
-        </div>
-        <a
-          href="#"
-          class="btn text-white fw-bold"
-          style="background-color: rgb(124, 13, 124); border-color: rgb(110, 0, 110);"
-        >
-          Ver detalles
-        </a>
-      </div>
     </div>
+      </div>
+      </div>
   </div>
+
+  <ng-template #loadingTemplate>
+    <p>Cargando productos...</p>
+  </ng-template>
+
 </div>
