--- a/src/app/features/product/product.component.scss
+++ b/src/app/features/product/product.component.scss
@@ -22,3 +22,27 @@
    background-color: rgb(124, 13, 124);
   border-color: rgb(255, 255, 255) ;
 }
+
+ .star-rating {
+        direction: rtl;
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .star-rating input {
+        display: none;
+    }
+
+    .star-rating label {
+        color: #ddd;
+        font-size: 24px;
+        padding: 0 2px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+    }
+
+    .star-rating label:hover,
+    .star-rating label:hover~label,
+    .star-rating input:checked~label {
+        color: #ffc107;
+    }
