--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -1,15 +1,11 @@
 <div class="body">
-  <div class="container-fluid">
+  <div class="container-md">
     <!-- Header -->
     <header class="bg-light border-bottom shadow-sm">
       <div class="d-flex justify-content-between align-items-center px-4 py-2">
         <!-- Logo -->
         <div>
-          <img
-            src="https://via.placeholder.com/100x40"
-            alt="Logo"
-            class="img-fluid"
-          />
+          <img src="https://via.placeholder.com/100x40" alt="Logo" class="img-fluid" />
         </div>
 
         <!-- Navigation -->
@@ -35,51 +31,29 @@
     </header>
 
     <!-- Banner -->
-    <section
-      class="text-white position-relative border banner "
-    >
-    <!-- NO FUNCIONA -->
+    <section class="text-white position-relative border banner ">
       <div class="row row-cols-1 row-cols-md-4 g-4 align-items-center mx-0">
         <div class="col-md-6">
           <div class="p-5">
             <h2 class="fw-bold">Dto. Bienvenida</h2>
             <p>Especial para nuevos usuarios</p>
-            <button
-              class="btn text-white fw-bold button_setting_2"
-            >
+            <button class="btn text-white fw-bold button_setting_2">
               Comprar
             </button>
           </div>
         </div>
         <div class="col-md-6 position-relative">
           <div class="d-flex justify-content-around align-items-center">
-            <div
-              class="card border"
-            >
-              <img
-                src="https://via.placeholder.com/200"
-                class="card-img-top rounded"
-                alt="Producto 1"
-              />
-              <div
-                class="card-img-overlay text-center text-white border"
-              >
-                <span
-                  class="badge fs-5"
-                >
+            <div class="card border">
+              <img src="https://via.placeholder.com/200" class="card-img-top rounded" alt="Producto 1" />
+              <div class="card-img-overlay text-center text-white border">
+                <span class="badge fs-5">
                   -62%
                 </span>
               </div>
             </div>
-            <div
-              class="card border"
-              
-            >
-              <img
-                src="https://via.placeholder.com/200"
-                class="card-img-top rounded"
-                alt="Producto 2"
-              />
+            <div class="card border">
+              <img src="https://via.placeholder.com/200" class="card-img-top rounded" alt="Producto 2" />
             </div>
           </div>
         </div>
@@ -90,21 +64,15 @@
     <section class="bg-light py-3 text-center">
       <div class="d-flex justify-content-around">
         <div>
-          <i
-            class="bi bi-truck fs-3 text-white p-2 rounded settings1"
-          ></i>
+          <i class="bi bi-truck fs-3 text-white p-2 rounded settings1"></i>
           <p class="mb-0">Envío gratis</p>
         </div>
         <div>
-          <i
-            class="bi bi-arrow-repeat fs-3 text-white p-2 rounded settings2 "
-          ></i>
+          <i class="bi bi-arrow-repeat fs-3 text-white p-2 rounded settings2 "></i>
           <p class="mb-0">Reembolso por fallos</p>
         </div>
         <div>
-          <i
-            class="bi bi-shield-check fs-3 text-white p-2 rounded settings3"
-          ></i>
+          <i class="bi bi-shield-check fs-3 text-white p-2 rounded settings3"></i>
           <p class="mb-0">Devoluciones gratis</p>
         </div>
       </div>
@@ -115,82 +83,65 @@
 
     <!-- Filters -->
     <div class="d-flex justify-content-center gap-3 my-3">
-      <input
-        type="text"
-        [(ngModel)]="nombreFiltro"
-        class="form-control w-25"
-        placeholder="Buscar por nombre"
-      />
-      <input
-        type="number"
-        [(ngModel)]="minPrecio"
-        class="form-control w-25"
-        placeholder="Precio mínimo"
-      />
-      <input
-        type="number"
-        [(ngModel)]="maxPrecio"
-        class="form-control w-25"
-        placeholder="Precio máximo"
-      />
+      <input type="text" [(ngModel)]="nombreFiltro" class="form-control w-25" placeholder="Buscar por nombre" />
+      <input type="number" [(ngModel)]="minPrecio" class="form-control w-25" placeholder="Precio mínimo" />
+      <input type="number" [(ngModel)]="maxPrecio" class="form-control w-25" placeholder="Precio máximo" />
 
       <!-- Search Button -->
-      <button
-        class="btn text-white fw-bold d-flex align-items-center gap-2 btn_filter"
-        (click)="getProducts()"
-      >
+      <button class="btn text-white fw-bold d-flex align-items-center gap-2 btn_filter" (click)="getProducts()">
         <i class="bi bi-search"></i> Buscar
       </button>
     </div>
 
     <!-- Product Cards -->
-    <div *ngIf="!isLoading" class="card-deck d-flex justify-content-center align-items-center h-100">
-      <div class="row row-cols">
-    <div class="col">
-      <div class="card border m-2" *ngFor="let producto of productos">
-
-          <img class="card-img-top" alt="Imagen del producto" />
-          <div class="card-body text-white">
-            <h5 class="card-title">{{ producto.name }}</h5>
-            <p class="card-text">
-              {{
+    <div *ngIf="!isLoading" class="card-deck d-flex h-100 ">
+      <div class="row gy-5">
+        <div class=" col-12 col-md-6 col-lg-4" *ngFor="let producto of productos">
+          <div class="card border card_border m-2">
+            <img class="card-img-top" alt="Imagen del producto" />
+            <div class="card-body text-black">
+              <h5 class="card-title">{{ producto.name }}</h5>
+              <p class="card-text">
+                {{
                 producto.description.length > 50
-                  ? producto.description.substring(0, 50) + "..."
-                  : producto.description
-              }}
-            </p>
-            <p><strong>Precio:</strong> ${{ producto.price }}</p>
-          </div>
-          <div class="card-footer"></div>
-         
-          <a href="#" class="btn text-white fw-bold btn_settings">
-            Ver detalles
-          </a>
-           <div class="rating"> 
-           
- <div class="star-rating animated-stars">
-            <input type="radio" id="star5" name="rating" value="5">
-            <label for="star5" class="bi bi-star-fill"></label>
-            <input type="radio" id="star4" name="rating" value="4">
-            <label for="star4" class="bi bi-star-fill"></label>
-            <input type="radio" id="star3" name="rating" value="3">
-            <label for="star3" class="bi bi-star-fill"></label>
-            <input type="radio" id="star2" name="rating" value="2">
-            <label for="star2" class="bi bi-star-fill"></label>
-            <input type="radio" id="star1" name="rating" value="1">
-            <label for="star1" class="bi bi-star-fill"></label>
-        </div>
+                ? producto.description.substring(0, 50) + "..."
+                : producto.description
+                }}
+              </p>
+              <p class="price"><strong>Precio:</strong> ${{ producto.price }}</p>
+            </div>
+            <div class="card-footer">
+              <div class="rating">
+
+                <div class="star-rating animated-stars">
+                  <input type="radio" id="star5" name="rating" value="5">
+                  <label for="star5" class="bi bi-star-fill"></label>
+                  <input type="radio" id="star4" name="rating" value="4">
+                  <label for="star4" class="bi bi-star-fill"></label>
+                  <input type="radio" id="star3" name="rating" value="3">
+                  <label for="star3" class="bi bi-star-fill"></label>
+                  <input type="radio" id="star2" name="rating" value="2">
+                  <label for="star2" class="bi bi-star-fill"></label>
+                  <input type="radio" id="star1" name="rating" value="1">
+                  <label for="star1" class="bi bi-star-fill"></label>
+                </div>
 
 
+              </div>
+            </div>
+
+            <a class="btn text-white fw-bold btn_settings">
+              Ver detalles
+            </a>
+
           </div>
         </div>
+      </div>
     </div>
-      </div>
-      </div>
   </div>
-
-  <ng-template #loadingTemplate>
-    <p>Cargando productos...</p>
-  </ng-template>
-
 </div>
+
+
+<ng-template #loadingTemplate>
+  <p>Cargando productos...</p>
+</ng-template>
