--- a/src/app/features/product/product.component.html
+++ b/src/app/features/product/product.component.html
@@ -64,7 +64,7 @@ averageRating NO FUNCIONA
     </div>
 
     <!-- Product Cards -->
-    <div *ngIf="!isLoading" class="card-deck d-flex h-100">
+    <div *ngIf="!isLoading" class="card-deck h-100">
       <div class="row">
         <div class="col-12 col-md-6 col-lg-4" *ngFor="let product of products">
           <div class="card border card_border m-2">
@@ -79,6 +79,7 @@ averageRating NO FUNCIONA
                 }}
               </p>
               <p class="price"><strong>Precio:</strong> ${{ product.price }}</p>
+              <a class="btn text-white fw-bold btn_settings"> Ver detalles </a>
             </div>
             <div class="card-footer">
               <div class="star-rating">
@@ -93,7 +94,6 @@ averageRating NO FUNCIONA
                     }"
                   ></i>
                 </ng-container>
-                <span>{{ product.averageRating | number: "1.1-1" }}/5</span>
               </div>
             </div>
           </div>
@@ -118,8 +118,6 @@ averageRating NO FUNCIONA
           Siguiente
         </button>
       </div>
-
-      <a class="btn text-white fw-bold btn_settings"> Ver detalles </a>
     </div>
   </div>
 </div>
